--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,11 @@
 
 @layer base {
   body {
-    background-image: url('https://images.unsplash.com/photo-1584820927498-cfe5211fd8bf?auto=format&fit=crop&q=80&w=2000');
+    /* background-image: url('https://images.unsplash.com/photo-1584820927498-cfe5211fd8bf?auto=format&fit=crop&q=80&w=2000'); */
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     background-blend-mode: overlay;
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: black;
   }
 }
